This should be ok

--- a/notebooks/SeparatingData.ipynb
+++ b/notebooks/SeparatingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,9 @@
     "import os\n",
     "import numpy \n",
     "import gdown\n",
-    "import zipfile"
+    "import zipfile\n",
+    "import random\n",
+    "import shutil"
    ]
   },
   {
@@ -41,9 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?id=1EfxHr8S4llUwu8P36Frq3h6XSBzrsHvp\n",
+      "From (redirected): https://drive.google.com/uc?id=1EfxHr8S4llUwu8P36Frq3h6XSBzrsHvp&confirm=t&uuid=56eb3859-3c3a-47ed-b04f-afb9b999c27c\n",
+      "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\train_images_5_class.zip\n",
+      "100%|██████████| 232M/232M [00:41<00:00, 5.60MB/s] \n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists(\"../input/train_images_5_class\"):\n",
     "    os.makedirs(\"../input/train_images_5_class\")\n",
@@ -55,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -160,6 +174,141 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Splitting\n",
+    "From the folder of alert, angry, frown, happy and relax\n",
+    "Split the data into three folders of train, eval and test for the sake of reproducibility\n",
+    "\n",
+    "Assummes the data is already in the input folder under train_images_5_class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------\n",
+      "alert\n",
+      "[('train', 1305), ('eval', 279), ('test', 281)]\n",
+      "----------------\n",
+      "angry\n",
+      "[('train', 1305), ('eval', 279), ('test', 281)]\n",
+      "----------------\n",
+      "frown\n",
+      "[('train', 1305), ('eval', 279), ('test', 281)]\n",
+      "----------------\n",
+      "happy\n",
+      "[('train', 1305), ('eval', 279), ('test', 281)]\n",
+      "----------------\n",
+      "relax\n",
+      "[('train', 1305), ('eval', 279), ('test', 281)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def splitDataIntoSub(root =\"../input/train_images_5_class\", properSubfolder=\"actual\", ratio = [0.7,0.15, 0.15]):\n",
+    "    if os.path.exists(f\"../input/{properSubfolder}\"):\n",
+    "        shutil.rmtree(f\"../input/{properSubfolder}\")\n",
+    "    if os.path.exists(root):\n",
+    "        trainRoot = f\"../input/{properSubfolder}/train\"\n",
+    "        if not os.path.exists(trainRoot):\n",
+    "            os.makedirs(trainRoot)\n",
+    "        evalRoot = f\"../input/{properSubfolder}/eval\"\n",
+    "        if not os.path.exists(evalRoot):\n",
+    "            os.makedirs(evalRoot)\n",
+    "        testRoot = f\"../input/{properSubfolder}/test\"\n",
+    "        if not os.path.exists(testRoot):\n",
+    "            os.makedirs(testRoot)\n",
+    "        for subDirectory in (os.listdir(root)):\n",
+    "            print(\"----------------\")\n",
+    "            print(subDirectory)\n",
+    "            classPath = os.path.join(root, subDirectory)\n",
+    "            if not os.path.isdir(classPath):\n",
+    "                continue\n",
+    "            images = os.listdir(classPath)\n",
+    "            random.shuffle(images)\n",
+    "            \n",
+    "            total = len(images)\n",
+    "            trainEnd = int(ratio[0] * total)\n",
+    "            evalEnd = trainEnd + int(ratio[1] *total)\n",
+    "\n",
+    "            splitImages = {\n",
+    "                \"train\": images[:trainEnd],\n",
+    "                \"eval\": images[trainEnd:evalEnd],\n",
+    "                \"test\": images[evalEnd:]\n",
+    "            }\n",
+    "            print(list((key, len(item)) for key, item in splitImages.items()))\n",
+    "\n",
+    "            for split in splitImages:\n",
+    "                splitDir = os.path.join(\"../input/\", properSubfolder, split, subDirectory)\n",
+    "                os.makedirs(splitDir, exist_ok=True)\n",
+    "\n",
+    "                for img_file in splitImages[split]:\n",
+    "                    src = os.path.join(root, subDirectory, img_file)\n",
+    "                    dst = os.path.join(splitDir, img_file)\n",
+    "                    shutil.copy2(src, dst)         \n",
+    "    else:\n",
+    "        print(\"Data does not exists\")\n",
+    "\n",
+    "splitDataIntoSub()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------\n",
+      "eval\n",
+      "279\n",
+      "279\n",
+      "279\n",
+      "279\n",
+      "279\n",
+      "------------\n",
+      "test\n",
+      "281\n",
+      "281\n",
+      "281\n",
+      "281\n",
+      "281\n",
+      "------------\n",
+      "train\n",
+      "1305\n",
+      "1305\n",
+      "1305\n",
+      "1305\n",
+      "1305\n"
+     ]
+    }
+   ],
+   "source": [
+    "def checkfolder(root=\"../input\", actualFolder =\"actual\"):\n",
+    "    folder = os.path.join(root, actualFolder)\n",
+    "    if (os.path.exists(folder)):\n",
+    "        for sub in os.listdir(folder):\n",
+    "            print(\"------------\")\n",
+    "            print(sub)\n",
+    "            subFolder = os.path.join(folder, sub)\n",
+    "            for emotion in os.listdir(subFolder):\n",
+    "                subFolderEmotion = os.path.join(subFolder, emotion)\n",
+    "                print(len(os.listdir(subFolderEmotion)))\n",
+    "                \n",
+    "\n",
+    "checkfolder()"
    ]
   },
   {
