--- a/notebooks/SeparatingData.ipynb
+++ b/notebooks/SeparatingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -59,30 +59,63 @@
     }
    ],
    "source": [
-    "if not os.path.exists(\"../input/train_images_5_class\"):\n",
-    "    os.makedirs(\"../input/train_images_5_class\")\n",
-    "    output_path = \"../input/train_images_5_class.zip\"\n",
-    "    gdown.download(f\"https://drive.google.com/uc?id=1EfxHr8S4llUwu8P36Frq3h6XSBzrsHvp\", output_path, quiet=False)\n",
+    "# if not os.path.exists(\"../input/train_images_5_class\"):\n",
+    "#     os.makedirs(\"../input/train_images_5_class\")\n",
+    "#     output_path = \"../input/train_images_5_class.zip\"\n",
+    "#     gdown.download(f\"https://drive.google.com/uc?id=1EfxHr8S4llUwu8P36Frq3h6XSBzrsHvp\", output_path, quiet=False)\n",
+    "#     with zipfile.ZipFile(output_path, 'r') as zip_ref:\n",
+    "#         zip_ref.extractall(\"../input\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The below should do the same except that it is for the processed images from billy's code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?id=1DiCQ52XyU40nwl5JC6B2nUBVYQrrpFl4\n",
+      "From (redirected): https://drive.google.com/uc?id=1DiCQ52XyU40nwl5JC6B2nUBVYQrrpFl4&confirm=t&uuid=636757eb-0d1b-45c3-ae4d-bbbf661c51c3\n",
+      "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\train_images_4_class.zip\n",
+      "100%|██████████| 120M/120M [00:22<00:00, 5.25MB/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "if not os.path.exists(\"../input/train_images_4_class\"):\n",
+    "    os.makedirs(\"../input/train_images_4_class\")\n",
+    "    output_path = \"../input/train_images_4_class.zip\"\n",
+    "    gdown.download(f\"https://drive.google.com/uc?id=1DiCQ52XyU40nwl5JC6B2nUBVYQrrpFl4\", output_path, quiet=False)\n",
     "    with zipfile.ZipFile(output_path, 'r') as zip_ref:\n",
     "        zip_ref.extractall(\"../input\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classes: ['alert', 'angry', 'frown', 'happy', 'relax']\n"
+      "Classes: ['angry', 'happy', 'relaxed', 'sad']\n"
      ]
     }
    ],
    "source": [
     "rootPath = \"../input\"\n",
-    "data_dir = rootPath + \"/train_images_5_class\"\n",
+    "data_dir = rootPath + \"/train_images_4_class\"\n",
     "\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),  # Resize images\n",
@@ -189,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,25 +230,22 @@
      "output_type": "stream",
      "text": [
       "----------------\n",
-      "alert\n",
-      "[('train', 1305), ('eval', 279), ('test', 281)]\n",
-      "----------------\n",
       "angry\n",
-      "[('train', 1305), ('eval', 279), ('test', 281)]\n",
-      "----------------\n",
-      "frown\n",
-      "[('train', 1305), ('eval', 279), ('test', 281)]\n",
+      "[('train', 1967), ('eval', 421), ('test', 423)]\n",
       "----------------\n",
       "happy\n",
-      "[('train', 1305), ('eval', 279), ('test', 281)]\n",
+      "[('train', 2081), ('eval', 445), ('test', 447)]\n",
       "----------------\n",
-      "relax\n",
-      "[('train', 1305), ('eval', 279), ('test', 281)]\n"
+      "relaxed\n",
+      "[('train', 2051), ('eval', 439), ('test', 441)]\n",
+      "----------------\n",
+      "sad\n",
+      "[('train', 1934), ('eval', 414), ('test', 415)]\n"
      ]
     }
    ],
    "source": [
-    "def splitDataIntoSub(root =\"../input/train_images_5_class\", properSubfolder=\"actual\", ratio = [0.7,0.15, 0.15]):\n",
+    "def splitDataIntoSub(root =\"../input/train_images_4_class\", properSubfolder=\"actual\", ratio = [0.7,0.15, 0.15]):\n",
     "    if os.path.exists(f\"../input/{properSubfolder}\"):\n",
     "        shutil.rmtree(f\"../input/{properSubfolder}\")\n",
     "    if os.path.exists(root):\n",
@@ -264,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -273,25 +303,22 @@
      "text": [
       "------------\n",
       "eval\n",
-      "279\n",
-      "279\n",
-      "279\n",
-      "279\n",
-      "279\n",
+      "421\n",
+      "445\n",
+      "439\n",
+      "414\n",
       "------------\n",
       "test\n",
-      "281\n",
-      "281\n",
-      "281\n",
-      "281\n",
-      "281\n",
+      "423\n",
+      "447\n",
+      "441\n",
+      "415\n",
       "------------\n",
       "train\n",
-      "1305\n",
-      "1305\n",
-      "1305\n",
-      "1305\n",
-      "1305\n"
+      "1967\n",
+      "2081\n",
+      "2051\n",
+      "1934\n"
      ]
     }
    ],
