--- a/notebooks/SqueezeExtractionBase.ipynb
+++ b/notebooks/SqueezeExtractionBase.ipynb
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reduced Train: 6525\n"
+      "Reduced Train: 8033\n"
      ]
     }
    ],
@@ -50,19 +50,19 @@
     "reducedDataset = Subset(allDataSet, reduced_indices)\n",
     "\n",
     "print(f\"Reduced Train: {len(reducedDataset)}\")\n",
-    "dataloader = DataLoader(reducedDataset, batch_size=32, shuffle=True)\n"
+    "dataloader = DataLoader(reducedDataset, batch_size=32, shuffle=True, drop_last=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reduced Train: 1395\n"
+      "Reduced Train: 1719\n"
      ]
     }
    ],
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "4\n"
      ]
     }
    ],
@@ -1290,12 +1290,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Version 1 with redefined classifier"
+    "Select one of the subcells here to expand and run to define the model before going to the training block"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SE after features and simple classifier (0.7955 on test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_state_dict(self, *args, **kwargs):\n",
+    "    kwargs.pop(\"check_hash\")\n",
+    "    return load_state_dict_from_url(self.url, *args, **kwargs)\n",
+    "\n",
+    "class SqueezeExcitationBlock(nn.Module):\n",
+    "    def __init__(self, channels, reduction_ratio=16):\n",
+    "        super(SqueezeExcitationBlock, self).__init__()\n",
+    "        self.global_avg_pool = nn.AdaptiveAvgPool2d(1)\n",
+    "        self.fc = nn.Sequential(\n",
+    "\n",
+    "        )\n",
+    "        self.interaction = nn.Sequential(\n",
+    "            nn.Linear(channels, channels // reduction_ratio, bias=False),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(channels // reduction_ratio, channels, bias=False),\n",
+    "            nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, c, _, _ = x.size()\n",
+    "        y = self.global_avg_pool(x).view(b, c)\n",
+    "        y = self.interaction(y).view(b, c, 1, 1)\n",
+    "        return x * y.expand_as(x)    \n",
+    "\n",
+    "class CustomENB5(nn.Module):\n",
+    "    def __init__(self,num_classes):\n",
+    "        super(CustomENB5, self).__init__()\n",
+    "        WeightsEnum.get_state_dict = get_state_dict\n",
+    "\n",
+    "        self.base = efficientnet_b5(weights=\"DEFAULT\")\n",
+    "        for param in self.base.parameters():\n",
+    "            param.requires_grad = False\n",
+    "        \n",
+    "        self.seAfterFeature = SqueezeExcitationBlock(\n",
+    "            channels=2048\n",
+    "        )\n",
+    "\n",
+    "        self.base.classifier = nn.Sequential(\n",
+    "            nn.Unflatten(1, (2048, 1, 1)),         \n",
+    "            SqueezeExcitationBlock(2048),\n",
+    "            nn.Flatten(),                            \n",
+    "            nn.Dropout(p=0.4),\n",
+    "            nn.Linear(2048, num_classes)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.base.features(x)\n",
+    "        x = self.seAfterFeature(x)\n",
+    "        x = self.base.avgpool(x)\n",
+    "        x = torch.flatten(x,1)\n",
+    "        x = self.base.classifier(x)\n",
+    "        return x        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SE after features and new classifier strucuture (0.7491)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,171 +1468,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Simple Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_state_dict(self, *args, **kwargs):\n",
-    "    kwargs.pop(\"check_hash\")\n",
-    "    return load_state_dict_from_url(self.url, *args, **kwargs)\n",
-    "\n",
-    "class SqueezeExcitationBlock(nn.Module):\n",
-    "    def __init__(self, channels, reduction_ratio=16):\n",
-    "        super(SqueezeExcitationBlock, self).__init__()\n",
-    "        self.global_avg_pool = nn.AdaptiveAvgPool2d(1)\n",
-    "        self.fc = nn.Sequential(\n",
-    "\n",
-    "        )\n",
-    "        self.interaction = nn.Sequential(\n",
-    "            nn.Linear(channels, channels // reduction_ratio, bias=False),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.Linear(channels // reduction_ratio, channels, bias=False),\n",
-    "            nn.Sigmoid()\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        b, c, _, _ = x.size()\n",
-    "        y = self.global_avg_pool(x).view(b, c)\n",
-    "        y = self.interaction(y).view(b, c, 1, 1)\n",
-    "        return x * y.expand_as(x)\n",
-    "     \n",
-    "class DenseResidualBlock(nn.Module):\n",
-    "    \"\"\"\n",
-    "    Dense Residual Block\n",
-    "    Processes input with skip connections and returns in the same number of channels\n",
-    "\n",
-    "    inChannels (int): the number of input channels going into the block (and also being returned)\n",
-    "    internalSize (int): the number of channels within the internal layers of the block\n",
-    "    \"\"\"\n",
-    "    def __init__(self, in_features, hidden_size=128, dropout_rate=0.3):\n",
-    "        super(DenseResidualBlock, self).__init__()\n",
-    "\n",
-    "        self.fc1 = nn.Linear(in_features, hidden_size)\n",
-    "        self.bn1 = nn.BatchNorm1d(hidden_size)\n",
-    "\n",
-    "        self.dropout = nn.Dropout(p=dropout_rate)\n",
-    "\n",
-    "        self.fc2 = nn.Linear(hidden_size, in_features)\n",
-    "        self.bn2 = nn.BatchNorm1d(in_features)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        identity = x  # Save for residual\n",
-    "\n",
-    "        out = F.relu(self.bn1(self.fc1(x)))\n",
-    "        out = self.dropout(out)\n",
-    "        out = F.relu(self.bn2(self.fc2(out)))\n",
-    "\n",
-    "        return identity + out \n",
-    "    \n",
-    "\n",
-    "class CustomENB5(nn.Module):\n",
-    "    def __init__(self,num_classes):\n",
-    "        super(CustomENB5, self).__init__()\n",
-    "        WeightsEnum.get_state_dict = get_state_dict\n",
-    "\n",
-    "        self.base = efficientnet_b5(weights=\"DEFAULT\")\n",
-    "        for param in self.base.parameters():\n",
-    "            param.requires_grad = False\n",
-    "        \n",
-    "        self.seAfterFeature = SqueezeExcitationBlock(\n",
-    "            channels=2048\n",
-    "        )\n",
-    "\n",
-    "        self.base.classifier = nn.Sequential(\n",
-    "            nn.Unflatten(1, (2048, 1, 1)),         \n",
-    "            SqueezeExcitationBlock(2048),\n",
-    "            nn.Flatten(),                            \n",
-    "            nn.Dropout(p=0.4),\n",
-    "            nn.Linear(2048, num_classes)\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.base.features(x)\n",
-    "        x = self.seAfterFeature(x)\n",
-    "        x = self.base.avgpool(x)\n",
-    "        x = torch.flatten(x,1)\n",
-    "        x = self.base.classifier(x)\n",
-    "        return x        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Another Version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_state_dict(self, *args, **kwargs):\n",
-    "    kwargs.pop(\"check_hash\")\n",
-    "    return load_state_dict_from_url(self.url, *args, **kwargs)\n",
-    "\n",
-    "class SqueezeExcitationBlock(nn.Module):\n",
-    "    def __init__(self, channels, reduction_ratio=16):\n",
-    "        super(SqueezeExcitationBlock, self).__init__()\n",
-    "        self.avg_pool = nn.AdaptiveAvgPool2d(1)\n",
-    "        self.interaction = nn.Sequential(\n",
-    "            nn.Linear(channels, channels // reduction_ratio, bias=False),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.Linear(channels // reduction_ratio, channels, bias=False),\n",
-    "            nn.Sigmoid()\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        b, c, _, _ = x.size()\n",
-    "        y = self.avg_pool(x).view(b, c)\n",
-    "        y = self.interaction(y).view(b, c, 1, 1)\n",
-    "        return x * y.expand_as(x)\n",
-    "class CustomENB5(nn.Module):\n",
-    "    def __init__(self,num_classes):\n",
-    "        super(CustomENB5, self).__init__()\n",
-    "        WeightsEnum.get_state_dict = get_state_dict\n",
-    "\n",
-    "        self.base = efficientnet_b5(weights=\"DEFAULT\")\n",
-    "        for param in self.base.parameters():\n",
-    "            param.requires_grad = False\n",
-    "        \n",
-    "        self.seAfterFeature = SqueezeExcitationBlock(\n",
-    "            channels=2048\n",
-    "        )\n",
-    "\n",
-    "        self.base.classifier = nn.Sequential(\n",
-    "            nn.Unflatten(1, (2048, 1, 1)),         \n",
-    "            SqueezeExcitationBlock(2048),\n",
-    "            nn.Flatten(),                            \n",
-    "            nn.Dropout(p=0.4),\n",
-    "            nn.Linear(2048, num_classes)\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.base.features(x)\n",
-    "        x = self.seAfterFeature(x)\n",
-    "        x = self.base.avgpool(x)\n",
-    "        x = torch.flatten(x,1)\n",
-    "        x = self.base.classifier(x)\n",
-    "        return x        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Trainer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2610,7 +2525,7 @@
        "      (8): Linear(in_features=256, out_features=512, bias=True)\n",
        "      (9): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "      (10): Dropout(p=0.3, inplace=False)\n",
-       "      (11): Linear(in_features=512, out_features=5, bias=True)\n",
+       "      (11): Linear(in_features=512, out_features=4, bias=True)\n",
        "    )\n",
        "  )\n",
        "  (seAfterFeature): SqueezeExcitationBlock(\n",
@@ -2626,7 +2541,7 @@
        ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2644,32 +2559,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10] Loss: 1.5237 Accuracy: 0.3614\n",
-      "Eval  Loss: 1.2587 | Accuracy: 0.4638\n",
-      "Epoch [2/10] Loss: 1.1729 Accuracy: 0.5116\n",
-      "Eval  Loss: 1.2221 | Accuracy: 0.4867\n",
-      "Epoch [3/10] Loss: 0.9063 Accuracy: 0.6307\n",
-      "Eval  Loss: 1.2986 | Accuracy: 0.5082\n",
-      "Epoch [4/10] Loss: 0.6712 Accuracy: 0.7419\n",
-      "Eval  Loss: 1.5251 | Accuracy: 0.5068\n",
+      "Epoch [1/10] Loss: 1.2408 Accuracy: 0.4676\n",
+      "Eval  Loss: 0.9549 | Accuracy: 0.5969\n",
+      "Epoch [2/10] Loss: 0.8161 Accuracy: 0.6775\n",
+      "Eval  Loss: 0.7540 | Accuracy: 0.7167\n",
+      "Epoch [3/10] Loss: 0.4684 Accuracy: 0.8246\n",
+      "Eval  Loss: 0.7209 | Accuracy: 0.7277\n",
+      "Epoch [4/10] Loss: 0.2494 Accuracy: 0.9152\n",
+      "Eval  Loss: 0.8222 | Accuracy: 0.7580\n",
+      "Epoch [5/10] Loss: 0.1692 Accuracy: 0.9430\n",
+      "Eval  Loss: 0.8627 | Accuracy: 0.7487\n",
       "No improvement. Trigger 1/3\n",
-      "Epoch [5/10] Loss: 0.4641 Accuracy: 0.8284\n",
-      "Eval  Loss: 1.6166 | Accuracy: 0.5104\n",
-      "Epoch [6/10] Loss: 0.2883 Accuracy: 0.8990\n",
-      "Eval  Loss: 1.8842 | Accuracy: 0.4839\n",
-      "No improvement. Trigger 1/3\n",
-      "Epoch [7/10] Loss: 0.2162 Accuracy: 0.9257\n",
-      "Eval  Loss: 2.0384 | Accuracy: 0.4932\n",
+      "Epoch [6/10] Loss: 0.1275 Accuracy: 0.9578\n",
+      "Eval  Loss: 0.9777 | Accuracy: 0.7563\n",
       "No improvement. Trigger 2/3\n",
-      "Epoch [8/10] Loss: 0.1705 Accuracy: 0.9421\n",
-      "Eval  Loss: 2.4987 | Accuracy: 0.4846\n",
+      "Epoch [7/10] Loss: 0.0941 Accuracy: 0.9691\n",
+      "Eval  Loss: 0.9027 | Accuracy: 0.7755\n",
+      "Epoch [8/10] Loss: 0.0750 Accuracy: 0.9758\n",
+      "Eval  Loss: 1.0333 | Accuracy: 0.7574\n",
+      "No improvement. Trigger 1/3\n",
+      "Epoch [9/10] Loss: 0.0811 Accuracy: 0.9753\n",
+      "Eval  Loss: 0.9153 | Accuracy: 0.7673\n",
+      "No improvement. Trigger 2/3\n",
+      "Epoch [10/10] Loss: 0.0531 Accuracy: 0.9852\n",
+      "Eval  Loss: 1.0087 | Accuracy: 0.7644\n",
       "No improvement. Trigger 3/3\n",
       "Early stopping triggered.\n"
      ]
