Updating the data for the final split hopefully

--- a/notebooks/SeparatingData.ipynb
+++ b/notebooks/SeparatingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,20 +84,27 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "From (original): https://drive.google.com/uc?id=1DiCQ52XyU40nwl5JC6B2nUBVYQrrpFl4\n",
-      "From (redirected): https://drive.google.com/uc?id=1DiCQ52XyU40nwl5JC6B2nUBVYQrrpFl4&confirm=t&uuid=636757eb-0d1b-45c3-ae4d-bbbf661c51c3\n",
-      "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\train_images_4_class.zip\n",
-      "100%|██████████| 120M/120M [00:22<00:00, 5.25MB/s] \n"
+      "From (original): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr\n",
+      "From (redirected): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr&confirm=t&uuid=2d2ec1af-28ed-45b5-9ddd-958106b97721\n",
+      "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\final_split.zip\n",
+      "100%|██████████| 95.8M/95.8M [00:19<00:00, 4.84MB/s]\n"
      ]
     }
    ],
    "source": [
-    "if not os.path.exists(\"../input/train_images_4_class\"):\n",
-    "    os.makedirs(\"../input/train_images_4_class\")\n",
-    "    output_path = \"../input/train_images_4_class.zip\"\n",
-    "    gdown.download(f\"https://drive.google.com/uc?id=1DiCQ52XyU40nwl5JC6B2nUBVYQrrpFl4\", output_path, quiet=False)\n",
+    "if not os.path.exists(\"../input/final_split\"):\n",
+    "    # os.makedirs(\"../input/actual\")\n",
+    "    output_path = \"../input/final_split.zip\"\n",
+    "    gdown.download(f\"https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr\", output_path, quiet=False)\n",
     "    with zipfile.ZipFile(output_path, 'r') as zip_ref:\n",
     "        zip_ref.extractall(\"../input\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making sure EfficientNetCanBeLoaded"
    ]
   },
   {
@@ -213,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Splitting\n",
+    "### Data Splitting ( No longer in use)\n",
     "From the folder of alert, angry, frown, happy and relax\n",
     "Split the data into three folders of train, eval and test for the sake of reproducibility\n",
     "\n",
@@ -222,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,51 +252,58 @@
     }
    ],
    "source": [
-    "def splitDataIntoSub(root =\"../input/train_images_4_class\", properSubfolder=\"actual\", ratio = [0.7,0.15, 0.15]):\n",
-    "    if os.path.exists(f\"../input/{properSubfolder}\"):\n",
-    "        shutil.rmtree(f\"../input/{properSubfolder}\")\n",
-    "    if os.path.exists(root):\n",
-    "        trainRoot = f\"../input/{properSubfolder}/train\"\n",
-    "        if not os.path.exists(trainRoot):\n",
-    "            os.makedirs(trainRoot)\n",
-    "        evalRoot = f\"../input/{properSubfolder}/eval\"\n",
-    "        if not os.path.exists(evalRoot):\n",
-    "            os.makedirs(evalRoot)\n",
-    "        testRoot = f\"../input/{properSubfolder}/test\"\n",
-    "        if not os.path.exists(testRoot):\n",
-    "            os.makedirs(testRoot)\n",
-    "        for subDirectory in (os.listdir(root)):\n",
-    "            print(\"----------------\")\n",
-    "            print(subDirectory)\n",
-    "            classPath = os.path.join(root, subDirectory)\n",
-    "            if not os.path.isdir(classPath):\n",
-    "                continue\n",
-    "            images = os.listdir(classPath)\n",
-    "            random.shuffle(images)\n",
+    "# def splitDataIntoSub(root =\"../input/train_images_4_class\", properSubfolder=\"actual\", ratio = [0.7,0.15, 0.15]):\n",
+    "#     if os.path.exists(f\"../input/{properSubfolder}\"):\n",
+    "#         shutil.rmtree(f\"../input/{properSubfolder}\")\n",
+    "#     if os.path.exists(root):\n",
+    "#         trainRoot = f\"../input/{properSubfolder}/train\"\n",
+    "#         if not os.path.exists(trainRoot):\n",
+    "#             os.makedirs(trainRoot)\n",
+    "#         evalRoot = f\"../input/{properSubfolder}/eval\"\n",
+    "#         if not os.path.exists(evalRoot):\n",
+    "#             os.makedirs(evalRoot)\n",
+    "#         testRoot = f\"../input/{properSubfolder}/test\"\n",
+    "#         if not os.path.exists(testRoot):\n",
+    "#             os.makedirs(testRoot)\n",
+    "#         for subDirectory in (os.listdir(root)):\n",
+    "#             print(\"----------------\")\n",
+    "#             print(subDirectory)\n",
+    "#             classPath = os.path.join(root, subDirectory)\n",
+    "#             if not os.path.isdir(classPath):\n",
+    "#                 continue\n",
+    "#             images = os.listdir(classPath)\n",
+    "#             random.shuffle(images)\n",
     "            \n",
-    "            total = len(images)\n",
-    "            trainEnd = int(ratio[0] * total)\n",
-    "            evalEnd = trainEnd + int(ratio[1] *total)\n",
+    "#             total = len(images)\n",
+    "#             trainEnd = int(ratio[0] * total)\n",
+    "#             evalEnd = trainEnd + int(ratio[1] *total)\n",
     "\n",
-    "            splitImages = {\n",
-    "                \"train\": images[:trainEnd],\n",
-    "                \"eval\": images[trainEnd:evalEnd],\n",
-    "                \"test\": images[evalEnd:]\n",
-    "            }\n",
-    "            print(list((key, len(item)) for key, item in splitImages.items()))\n",
+    "#             splitImages = {\n",
+    "#                 \"train\": images[:trainEnd],\n",
+    "#                 \"eval\": images[trainEnd:evalEnd],\n",
+    "#                 \"test\": images[evalEnd:]\n",
+    "#             }\n",
+    "#             print(list((key, len(item)) for key, item in splitImages.items()))\n",
     "\n",
-    "            for split in splitImages:\n",
-    "                splitDir = os.path.join(\"../input/\", properSubfolder, split, subDirectory)\n",
-    "                os.makedirs(splitDir, exist_ok=True)\n",
+    "#             for split in splitImages:\n",
+    "#                 splitDir = os.path.join(\"../input/\", properSubfolder, split, subDirectory)\n",
+    "#                 os.makedirs(splitDir, exist_ok=True)\n",
     "\n",
-    "                for img_file in splitImages[split]:\n",
-    "                    src = os.path.join(root, subDirectory, img_file)\n",
-    "                    dst = os.path.join(splitDir, img_file)\n",
-    "                    shutil.copy2(src, dst)         \n",
-    "    else:\n",
-    "        print(\"Data does not exists\")\n",
+    "#                 for img_file in splitImages[split]:\n",
+    "#                     src = os.path.join(root, subDirectory, img_file)\n",
+    "#                     dst = os.path.join(splitDir, img_file)\n",
+    "#                     shutil.copy2(src, dst)         \n",
+    "#     else:\n",
+    "#         print(\"Data does not exists\")\n",
     "\n",
-    "splitDataIntoSub()"
+    "# splitDataIntoSub()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Valid data in folder"
    ]
   },
   {
