Testing the accuracy of the models  with the data augmentation

--- a/notebooks/SeparatingData.ipynb
+++ b/notebooks/SeparatingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -85,14 +85,14 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr\n",
-      "From (redirected): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr&confirm=t&uuid=2d2ec1af-28ed-45b5-9ddd-958106b97721\n",
+      "From (redirected): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr&confirm=t&uuid=0becf68b-1d79-4429-91fe-8f3d09f2a44c\n",
       "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\final_split.zip\n",
-      "100%|██████████| 95.8M/95.8M [00:19<00:00, 4.84MB/s]\n"
+      "100%|██████████| 95.8M/95.8M [00:24<00:00, 3.86MB/s]\n"
      ]
     }
    ],
    "source": [
-    "if not os.path.exists(\"../input/final_split\"):\n",
+    "if not os.path.exists(\"../input/final_split_training_augmented\"):\n",
     "    # os.makedirs(\"../input/actual\")\n",
     "    output_path = \"../input/final_split.zip\"\n",
     "    gdown.download(f\"https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr\", output_path, quiet=False)\n",
@@ -317,27 +317,27 @@
      "text": [
       "------------\n",
       "eval\n",
-      "421\n",
-      "445\n",
-      "439\n",
-      "414\n",
+      "142\n",
+      "150\n",
+      "148\n",
+      "139\n",
       "------------\n",
       "test\n",
-      "423\n",
-      "447\n",
-      "441\n",
-      "415\n",
+      "140\n",
+      "148\n",
+      "146\n",
+      "138\n",
       "------------\n",
       "train\n",
-      "1967\n",
-      "2081\n",
-      "2051\n",
-      "1934\n"
+      "1965\n",
+      "2079\n",
+      "2049\n",
+      "1932\n"
      ]
     }
    ],
    "source": [
-    "def checkfolder(root=\"../input\", actualFolder =\"actual\"):\n",
+    "def checkfolder(root=\"../input\", actualFolder =\"final_split_training_augmented\"):\n",
     "    folder = os.path.join(root, actualFolder)\n",
     "    if (os.path.exists(folder)):\n",
     "        for sub in os.listdir(folder):\n",
