update: pull from main and edited dataset

--- a/notebooks/HyperparameterTuning.ipynb
+++ b/notebooks/HyperparameterTuning.ipynb
@@ -111,14 +111,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset already exists at ../input/train_images_4_class\n"
+      "Downloading dataset from https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr to ../input/final_split.zip\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr\n",
+      "From (redirected): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr&confirm=t&uuid=3f48c410-7797-4dca-a360-e465eb7222c8\n",
+      "To: /Users/huiningonn/Documents/adl/DogEmotionADL/input/final_split.zip\n",
+      "100%|██████████| 95.8M/95.8M [00:02<00:00, 35.0MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting dataset...\n",
+      "Extraction complete. Dataset available at ../input/final_split\n"
      ]
     }
    ],
    "source": [
-    "DATA_DIR = \"../input/train_images_4_class\"\n",
-    "ZIP_URL = \"https://drive.google.com/uc?id=1DiCQ52XyU40nwl5JC6B2nUBVYQrrpFl4\"\n",
-    "ZIP_FILENAME = \"../input/train_images_4_class.zip\"\n",
+    "DATA_DIR = \"../input/final_split\"\n",
+    "ZIP_URL = \"https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr\"\n",
+    "ZIP_FILENAME = \"../input/final_split.zip\"\n",
     "ROOT_DIR = \"../input\"\n",
     "\n",
     "download_dataset(DATA_DIR, ZIP_URL, ZIP_FILENAME, ROOT_DIR)"
@@ -135,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,25 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full train dataset: 8033\n",
-      "Full val dataset: 1719\n",
-      "Full test dataset: 1726\n",
-      "Subset-train dataset: 8033\n",
-      "Subset-val dataset: 1719\n",
-      "Subset-test dataset: 1726\n",
+      "Full train dataset: 8025\n",
+      "Full val dataset: 579\n",
+      "Full test dataset: 572\n",
+      "Subset-train dataset: 8025\n",
+      "Subset-val dataset: 579\n",
+      "Subset-test dataset: 572\n",
       "DataLoaders for hyperparameter tuning are ready.\n"
      ]
     }
    ],
    "source": [
-    "SPLIT_DATASET = os.path.abspath(\"../input/actual\")\n",
+    "SPLIT_DATASET = os.path.abspath(\"../input/final_split_training_augmented\")\n",
     "BATCH_SIZE = 64\n",
     "\n",
     "# Define a transform. \n",
