base DINOv2 w/o hyperparam tuning

--- a/notebooks/SeparatingData.ipynb
+++ b/notebooks/SeparatingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +85,9 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr\n",
-      "From (redirected): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr&confirm=t&uuid=2d2ec1af-28ed-45b5-9ddd-958106b97721\n",
-      "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\final_split.zip\n",
-      "100%|██████████| 95.8M/95.8M [00:19<00:00, 4.84MB/s]\n"
+      "From (redirected): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr&confirm=t&uuid=5d4bf77a-87d9-43b9-a1ff-4a7c74eb2596\n",
+      "To: /Users/valencia/Desktop/vscode_projects/adl_dog/DogEmotionADL/input/final_split.zip\n",
+      "100%|██████████| 95.8M/95.8M [00:01<00:00, 66.8MB/s]\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ADLTEAM",
+   "display_name": "adl",
    "language": "python",
    "name": "python3"
   },
