dont know how to hyperparam tune

--- a/notebooks/HyperparameterTuning.ipynb
+++ b/notebooks/HyperparameterTuning.ipynb
@@ -751,7 +751,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dogemotion",
+   "display_name": "rose",
    "language": "python",
    "name": "python3"
   },
