update: minor changes to code, did not rerun

--- a/notebooks/EfficientNetB5GPU.ipynb
+++ b/notebooks/EfficientNetB5GPU.ipynb
@@ -79,9 +79,28 @@
     "MODEL_SAVE_DIR = os.path.join(project_root, \"models\", \"efficientnetb5\")\n",
     "os.makedirs(MODEL_SAVE_DIR, exist_ok=True) \n",
     "\n",
-    "from utils.DataHandler import download_dataset, create_full_data_loaders, create_tuning_data_loaders\n",
+    "from utils.DataHandler import download_dataset, create_full_data_loaders, create_tuning_data_loaders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_device():\n",
+    "    if torch.cuda.is_available():\n",
+    "        print(\"Using device: CUDA (GPU)\")\n",
+    "        return torch.device(\"cuda\")\n",
+    "    elif torch.backends.mps.is_available():\n",
+    "        print(\"Using device: MPS (Apple Silicon GPU)\")\n",
+    "        os.environ['PYTORCH_ENABLE_MPS_FALLBACK'] = '1'\n",
+    "        return torch.device(\"mps\")\n",
+    "    else:\n",
+    "        print(\"Using device: CPU\")\n",
+    "        return torch.device(\"cpu\")\n",
     "\n",
-    "print(\"Libraries imported. Using device:\", \"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "device = get_device()"
    ]
   },
   {
@@ -302,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -314,9 +333,10 @@
     }
    ],
    "source": [
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "print(f\"Using device: {device}\")\n",
     "model = BaseEfficientNetB5(num_classes=4, dropout=0.3, freeze_backbone=True, hidden_sizes=[256, 128], activation='relu').to(device)\n",
-    "print(\"Model instantiated:\", model.__class__.__name__)"
+    "print(\"Model instantiated:\", model.__class__.__name__)\n",
+    "print(model)"
    ]
   },
   {
@@ -337,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +367,7 @@
     "import torch.optim as optim\n",
     "from ray import tune\n",
     "\n",
-    "CHECKPOINT_DIR = os.path.abspath(\"../models/hyptune\")\n",
+    "CHECKPOINT_DIR = os.path.abspath(\"../models/hyptune/efficientnetb5\")\n",
     "def train_model(config, checkpoint_dir=CHECKPOINT_DIR, data_dir=None):\n",
     "    \"\"\"Training function for Ray Tune hyperparameter tuning.\n",
     "\n",
@@ -429,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12360,7 +12380,7 @@
     "    \"weight_decay\": tune.loguniform(1e-5, 1e-3),\n",
     "    \"dropout\": tune.uniform(0.3, 0.5),\n",
     "    \"hidden_sizes\": tune.choice([[256, 128], [512, 256], None]),\n",
-    "    \"activation\": tune.choice([\"relu\", \"tanh\", \"sigmoid\"]),\n",
+    "    \"activation\": tune.choice([\"relu\", \"tanh\", \"sigmoid\", \"leakyrelu\", \"gelu\"]),\n",
     "    \"freeze_backbone\": True,\n",
     "    \"num_epochs\": 10,\n",
     "    \"optimiser\": tune.choice([\n",
@@ -12369,7 +12389,6 @@
     "    ]),\n",
     "    \"criterion\": lambda: nn.CrossEntropyLoss()\n",
     "}\n",
-    "\n",
     "\n",
     "def trial_dirname_creator(trial):\n",
     "    # this is meant to create short and unique directory name for each trial bc else too long for windows\n",
@@ -12381,7 +12400,7 @@
     "\n",
     "# tuner object\n",
     "tuner = tune.Tuner(\n",
-    "    tune.with_resources(train_model, {\"cpu\": 4, \"gpu\": 1}), # specify based on the device u using because by default it uses all, i.e if u have 4 cpus; it does 4 concurrent trials\n",
+    "    tune.with_resources(train_model, {\"cpu\": 4, \"gpu\": 1}), #NOTE:specify based on the device u using because by default it uses all, i.e if u have 4 cpus; it does 4 concurrent trials\n",
     "    tune_config=tune.TuneConfig(\n",
     "        scheduler=asha_scheduler,\n",
     "        search_alg=optuna_search,\n",
@@ -12391,7 +12410,7 @@
     "    ),\n",
     "    run_config=tune.RunConfig(\n",
     "        name=\"baseefficientnetb5\",\n",
-    "        storage_path=\"C:/ray_results/baseefficientnetb5\",\n",
+    "        storage_path=\"C:/ray_results/baseefficientnetb5\", #NOTE: not required for macos\n",
     "        log_to_file=True,\n",
     "        verbose=1),\n",
     "    param_space=config,\n",
