Compressing notebooks adding requirements and upodating data fetching

--- a/notebooks/SeparatingData.ipynb
+++ b/notebooks/SeparatingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The below code should fetch the folder from google drive and extract the images into a folder in the input"
+    "### The code below will extract the data with simple data processing\n",
+    "\n",
+    "please delete final_split_training_augmented if you wish to use it"
    ]
   },
   {
@@ -51,32 +53,33 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "From (original): https://drive.google.com/uc?id=1EfxHr8S4llUwu8P36Frq3h6XSBzrsHvp\n",
-      "From (redirected): https://drive.google.com/uc?id=1EfxHr8S4llUwu8P36Frq3h6XSBzrsHvp&confirm=t&uuid=56eb3859-3c3a-47ed-b04f-afb9b999c27c\n",
-      "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\train_images_5_class.zip\n",
-      "100%|██████████| 232M/232M [00:41<00:00, 5.60MB/s] \n"
+      "From (original): https://drive.google.com/uc?id=1XhSO100qgRuLEyopfb7-4gBp0CRjZkfg\n",
+      "From (redirected): https://drive.google.com/uc?id=1XhSO100qgRuLEyopfb7-4gBp0CRjZkfg&confirm=t&uuid=9fb92c17-9dc6-4dc1-a10c-56ad25198315\n",
+      "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\final_split_15Apr2025.zip\n",
+      "100%|██████████| 95.5M/95.5M [00:11<00:00, 8.25MB/s]\n"
      ]
     }
    ],
    "source": [
-    "# if not os.path.exists(\"../input/train_images_5_class\"):\n",
-    "#     os.makedirs(\"../input/train_images_5_class\")\n",
-    "#     output_path = \"../input/train_images_5_class.zip\"\n",
-    "#     gdown.download(f\"https://drive.google.com/uc?id=1EfxHr8S4llUwu8P36Frq3h6XSBzrsHvp\", output_path, quiet=False)\n",
-    "#     with zipfile.ZipFile(output_path, 'r') as zip_ref:\n",
-    "#         zip_ref.extractall(\"../input\")"
+    "if not os.path.exists(\"../input/final_split_15Apr2025\"):\n",
+    "    output_path = \"../input/final_split_15Apr2025.zip\"\n",
+    "    gdown.download(f\"https://drive.google.com/uc?id=1XhSO100qgRuLEyopfb7-4gBp0CRjZkfg\", output_path, quiet=False)\n",
+    "    with zipfile.ZipFile(output_path, 'r') as zip_ref:\n",
+    "        zip_ref.extractall(\"../input\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The below should do the same except that it is for the processed images from billy's code"
+    "### dilb processed image\n",
+    "\n",
+    "This is image that has been processed using dilb that one paper that I could not get out of my head, implemented by billy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,18 +87,17 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "From (original): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr\n",
-      "From (redirected): https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr&confirm=t&uuid=0becf68b-1d79-4429-91fe-8f3d09f2a44c\n",
-      "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\final_split.zip\n",
-      "100%|██████████| 95.8M/95.8M [00:24<00:00, 3.86MB/s]\n"
+      "From (original): https://drive.google.com/uc?id=1VIgccLSe4a--Pyaf4jUgbnCIlZGSvOOI\n",
+      "From (redirected): https://drive.google.com/uc?id=1VIgccLSe4a--Pyaf4jUgbnCIlZGSvOOI&confirm=t&uuid=d828df87-d453-4b40-a423-d3c3ef254da8\n",
+      "To: c:\\Users\\yongl\\OneDrive\\Documents\\GitHub\\DogEmotionADL\\input\\dlib_dog_emotion_dataset.zip\n",
+      "100%|██████████| 254M/254M [00:29<00:00, 8.70MB/s] \n"
      ]
     }
    ],
    "source": [
-    "if not os.path.exists(\"../input/final_split_training_augmented\"):\n",
-    "    # os.makedirs(\"../input/actual\")\n",
-    "    output_path = \"../input/final_split.zip\"\n",
-    "    gdown.download(f\"https://drive.google.com/uc?id=11t8m703wcNss3w5diJSUGBA_vXnCKChr\", output_path, quiet=False)\n",
+    "if not os.path.exists(\"../input/dlib_dog_emotion_dataset\"):\n",
+    "    output_path = \"../input/dlib_dog_emotion_dataset.zip\"\n",
+    "    gdown.download(f\"https://drive.google.com/uc?id=1VIgccLSe4a--Pyaf4jUgbnCIlZGSvOOI\", output_path, quiet=False)\n",
     "    with zipfile.ZipFile(output_path, 'r') as zip_ref:\n",
     "        zip_ref.extractall(\"../input\")"
    ]
