--- a/YongLiangExperimentations/UncleanDataset/Models.ipynb
+++ b/YongLiangExperimentations/UncleanDataset/Models.ipynb
@@ -11332,6 +11332,133 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2cc7213e",
+   "metadata": {},
+   "source": [
+    "## SwinFicientNet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4db22edc",
+   "metadata": {},
+   "source": [
+    "### Code Structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cd25dea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SqueezeExcitationBlock(nn.Module):\n",
+    "    def __init__(self, channels, reduction_ratio=16):\n",
+    "        super(SqueezeExcitationBlock, self).__init__()\n",
+    "        self.avg_pool = nn.AdaptiveAvgPool2d(1)\n",
+    "        self.interaction = nn.Sequential(\n",
+    "            nn.Linear(channels, channels // reduction_ratio, bias=False),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(channels // reduction_ratio, channels, bias=False),\n",
+    "            nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, c, _, _ = x.size()\n",
+    "        y = self.avg_pool(x).view(b, c)\n",
+    "        y = self.interaction(y).view(b, c, 1, 1)\n",
+    "        return x * y.expand_as(x)\n",
+    "\n",
+    "\n",
+    "class SwinFicientNet(nn.Module):\n",
+    "    \"\"\"\n",
+    "    EfficientNetB5 with optional SE block and configurable classifier for Ray Tune.\n",
+    "    \"\"\"\n",
+    "    def __init__(self,\n",
+    "                 num_classes: int = 4,\n",
+    "                 dropout: float = 0.2,\n",
+    "                 hidden_sizes: Optional[List[int]] = None,\n",
+    "                 activation: str = 'relu',\n",
+    "                 use_se: bool = True,\n",
+    "                 unfreeze_blocks: Optional[List[int]] = None) -> None:\n",
+    "        super(SwinFicientNet, self).__init__()\n",
+    "        weights = EfficientNet_B5_Weights.DEFAULT\n",
+    "        self.backbone = efficientnet_b5(weights=weights)\n",
+    "        self.se = SqueezeExcitationBlock(2048)\n",
+    "        self.project = nn.Conv2d(2048, 96, kernel_size=1)\n",
+    "        self.adapt_pool = nn.AdaptiveAvgPool2d((14, 14))\n",
+    "        self.swin = SwinTransformer(\n",
+    "            img_size=14,         # Should match the adaptive pool output size.\n",
+    "            patch_size=1,\n",
+    "            in_chans=96,\n",
+    "            embed_dim=96,\n",
+    "            depths=[2, 2, 6, 2],\n",
+    "            num_heads=[3, 6, 12, 24],\n",
+    "            window_size=7,       # 14 % 7 == 0 (good!)\n",
+    "            mlp_ratio=4.0,\n",
+    "            qkv_bias=True,\n",
+    "            drop_path_rate=0.1,\n",
+    "            ape=False,\n",
+    "            patch_norm=True,\n",
+    "            num_classes=num_classes\n",
+    "        )\n",
+    "        in_features = self.backbone.classifier[1].in_features\n",
+    "\n",
+    "        for param in self.backbone.features.parameters():\n",
+    "            param.requires_grad = False\n",
+    "\n",
+    "        if unfreeze_blocks:\n",
+    "            for idx in unfreeze_blocks:\n",
+    "                for param in self.backbone.features[idx].parameters():\n",
+    "                    param.requires_grad = True\n",
+    "\n",
+    "        # Build the classifier head\n",
+    "        layers = []\n",
+    "        if use_se:\n",
+    "            layers.extend([\n",
+    "                nn.Unflatten(1, (in_features, 1, 1)),\n",
+    "                SqueezeExcitationBlock(in_features),\n",
+    "                nn.Flatten()\n",
+    "            ])\n",
+    "        \n",
+    "        input_dim = in_features\n",
+    "        if hidden_sizes:\n",
+    "            for hidden_dim in hidden_sizes:\n",
+    "                layers.append(nn.Dropout(p=dropout))\n",
+    "                layers.append(nn.Linear(input_dim, hidden_dim))\n",
+    "                layers.append(self._get_activation(activation))\n",
+    "                input_dim = hidden_dim\n",
+    "        \n",
+    "        layers.append(nn.Dropout(p=dropout))\n",
+    "        layers.append(nn.Linear(input_dim, num_classes))\n",
+    "\n",
+    "        self.backbone.classifier[1] = nn.Sequential(*layers)\n",
+    "\n",
+    "    def _get_activation(self, activation: str) -> Callable:\n",
+    "        if activation.lower() == 'relu':\n",
+    "            return nn.ReLU()\n",
+    "        elif activation.lower() == 'tanh':\n",
+    "            return nn.Tanh()\n",
+    "        elif activation.lower() == 'sigmoid':\n",
+    "            return nn.Sigmoid()\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unsupported activation function: {activation}\")\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        # Extract features using EfficientNet-B5.\n",
+    "        x = self.backbone(x)       # Expected shape: [B, 2048, H, W] (typically 7x7 or so)\n",
+    "        x = self.se(x)             # Apply Squeeze-Excitation\n",
+    "        x = self.project(x)        # Project to 96 channels -> shape: [B, 96, H, W]\n",
+    "        x = self.adapt_pool(x)     # Resize to [B, 96, 14, 14]\n",
+    "        x = self.swin(x)           # Pass through Swin Transformer; output: [B, num_classes]\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dcf2861c",
    "metadata": {},
    "source": [
